--- a/style.css
+++ b/style.css
@@ -2,27 +2,54 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 400px; height: auto;
+    width: 512px; height: auto;
 }
 
 .title {
     text-align: center;
     font-weight: bold;
+    background-color: black;
+    color: white;
+    margin-top: 0px;
 }
 
 .header {
-    background-color: rgb(72, 87, 87);
+    background-color: rgb(70, 70, 70);
+    color: white;
     width:100%;
-    margin:0px;
+    margin:5px;
+    padding: 0px;
+    text-align: center;
 }
 
 .body {
-    background-color: rgb(0, 235, 235);
+    background-color: rgb(0, 0, 0);
+    color: white;
     width:100%;
-    margin:0px;
+    margin:5px;
+    padding:5px;
 }
 
-* {
-    padding:20px;
-    margin:0px;
+.link {
+    display: inline-block;
+    background-color: black; color:white;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.content {
+    text-align: center;
+}
+
+.instructions {
+    text-align: center;
+}
+
+.ingredients {
+    text-align: left;
+    width:600px;
+}
+
+.explanation {
+    text-align: center;
 }
